--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               From students to students. The best place to take notes during class.
             </p>
             <br>
-            <a href="" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
+            <a href="https://apps.apple.com/br/app/caderno-roxo/id1535269503" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
           </div>
 
           <!-- PREMAX -->
@@ -216,7 +216,7 @@
               Everyone is an artist. Explore, search, buy and sell presets and photo filters.
             </p>
             <br>
-            <a href="" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
+            <a href="https://apps.apple.com/br/app/premax/id1515636556" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
           </div>
         </div>
 
@@ -270,7 +270,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-PX.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on the App Store </a>
+                <a href="https://apps.apple.com/br/app/premax/id1515636556" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
                 <a href="https://github.com/lucasfnicolau/PresetsMarketplace" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -294,7 +294,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-LA.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/FolQOrzc1Dc" class="btn btn-link-md btn-lg"> See on YouTube </a>
                 <br>
                 <a href="https://github.com/LeoAOliveira/Useless-App" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -318,8 +318,6 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-BA.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See images </a>
-                <br>
                 <a href="https://github.com/LeoAOliveira/Nano3-Ledro" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
             </div>
@@ -332,7 +330,7 @@
               <div class="col-lg-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -344,7 +342,7 @@
               <div class="col-lg-12 links-projects">
                 <a href="https://apps.apple.com/us/app/cahoe/id1525030276" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See illustrations </a>
+                <a href="cahoeGallery.html" class="btn btn-link-md btn-lg"> See illustrations </a>
               </div>
             </div>
           </div>
@@ -364,7 +362,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-PA.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -374,7 +372,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-PR.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -386,7 +384,7 @@
               <div class="col-lg-12 links-projects">
                 <a href="https://apps.apple.com/br/app/aoredor/id1503555265" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/ZDZ4i6Fh2gg" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -425,7 +423,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-PX.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on the App Store </a>
+                <a href="https://apps.apple.com/br/app/premax/id1515636556" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
                 <a href="https://github.com/lucasfnicolau/PresetsMarketplace" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -449,7 +447,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-LA.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/FolQOrzc1Dc" class="btn btn-link-md btn-lg"> See on YouTube </a>
                 <br>
                 <a href="https://github.com/LeoAOliveira/Useless-App" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -473,8 +471,6 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-BA.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See images </a>
-                <br>
                 <a href="https://github.com/LeoAOliveira/Nano3-Ledro" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
             </div>
@@ -487,7 +483,7 @@
               <div class="col-sm-12 col-md-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -499,7 +495,7 @@
               <div class="col-sm-12 col-md-12 links-projects">
                 <a href="https://apps.apple.com/us/app/cahoe/id1525030276" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See illustrations </a>
+                <a href="cahoeGallery.html" class="btn btn-link-md btn-lg"> See illustrations </a>
               </div>
             </div>
           </div>
@@ -519,7 +515,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-PA.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -529,7 +525,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-PR.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -541,7 +537,7 @@
               <div class="col-sm-12 col-md-12 links-projects">
                 <a href="https://apps.apple.com/br/app/aoredor/id1503555265" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/ZDZ4i6Fh2gg" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -580,7 +576,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-PX.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on the App Store </a>
+                <a href="https://apps.apple.com/br/app/premax/id1515636556" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
                 <a href="https://github.com/lucasfnicolau/PresetsMarketplace" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -604,7 +600,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-LA.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/FolQOrzc1Dc" class="btn btn-link-md btn-lg"> See on YouTube </a>
                 <br>
                 <a href="https://github.com/LeoAOliveira/Useless-App" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
@@ -628,8 +624,6 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-BA.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See images </a>
-                <br>
                 <a href="https://github.com/LeoAOliveira/Nano3-Ledro" class="btn btn-link-md btn-lg"> See on GitHub </a>
               </div>
             </div>
@@ -642,7 +636,7 @@
               <div class="col-xs-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -654,7 +648,7 @@
               <div class="col-xs-12 links-projects">
                 <a href="https://apps.apple.com/us/app/cahoe/id1525030276" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See illustrations </a>
+                <a href="cahoeGallery.html" class="btn btn-link-md btn-lg"> See illustrations </a>
               </div>
             </div>
           </div>
@@ -674,7 +668,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-PA.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -684,7 +678,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-PR.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -696,7 +690,7 @@
               <div class="col-xs-12 links-projects">
                 <a href="https://apps.apple.com/br/app/aoredor/id1503555265" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="https://youtu.be/ZDZ4i6Fh2gg" class="btn btn-link-md btn-lg"> See on YouTube </a>
               </div>
             </div>
           </div>
@@ -734,7 +728,7 @@
                 <h1 class="title-publications"> Mac Catalyst:<br>leve seu app de iPad para o Mac </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
-                  Medium article on Mac Catalyst, its implementation and features.
+                  Medium article on Mac Catalyst, how to implement it and some incredible features.
                 </p>
                 <!-- Link -->
                 <a href="https://medium.com/mackmobile/mac-catalyst-leve-seu-app-de-ipad-para-o-mac-f0e10150b518" class="btn link-publications btn-lg"> Read on Medium </a>
@@ -751,7 +745,7 @@
                 <h1 class="title-publications"> Múltiplos Carrosséis:<br>Table View + Collection View </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
-                  Tutorial for creating carousels published on Medium, very common in iOS apps.
+                  Tutorial for creating carousels published on Medium, very common in iOS apps interface.
                 </p>
                 <!-- Link -->
                 <a href="https://medium.com/mackmobile/múltiplos-carrosséis-table-view-collection-view-8430208ec8dd" class="btn link-publications btn-lg"> Read on Medium </a>
