--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               Everyone is an artist. Explore, search, buy and sell presets and photo filters.
             </p>
             <br>
-            <a href="" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
+            <a href="https://apps.apple.com/br/app/premax/id1515636556" class="btn btn-custom btn-custom-sm btn-lg"> See on the App Store </a>
           </div>
 
         </div>
