--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <div class="col-sm-12 col-md-12 col-lg-12 visible-sm-* visible-md-* visible-lg-* hidden-xs">
               <h1 class="titles"> Hello there! </h1>
               <p class="col text-center text-about"> 
-                I'm Leo! iOS Developer at Apple Developer Academy | Mackenzie and
-                MIT Global Startup Labs former participant.
+                I'm Leo! iOS Developer at C6 Bank and 
+                former member at Apple Developer Academy | Mackenzie and MIT Global Startup Labs.
                 Swift, technology, innovation and business enthusiast.
               </p>
             </div>
             <div class="col-xs-12 visible-xs-* hidden-sm hidden-md hidden-lg">
               <h1 class="titles-xs"> Hello there! </h1>
               <p class="col text-center text-about-xs"> 
-                I'm Leo! iOS Developer at Apple Developer Academy | Mackenzie and
-                MIT Global Startup Labs former participant.
+                I'm Leo! iOS Developer at C6 Bank and 
+                former member at Apple Developer Academy | Mackenzie and MIT Global Startup Labs.
                 Swift, technology, innovation and business enthusiast.
             </div>
             </p>
