--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <div class="col-lg-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.html" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -362,7 +362,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-PA.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
@@ -372,7 +372,7 @@
             <div class="col-lg-12 card">
               <img src="images/icons-titles/icon-title-PR.png" class="col-lg-12 img-responsive img-projects">
               <div class="col-lg-12 links-projects">
-                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
@@ -483,7 +483,7 @@
               <div class="col-sm-12 col-md-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.html" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -515,7 +515,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-PA.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                  <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
@@ -525,7 +525,7 @@
             <div class="col-sm-12 col-md-12 card">
               <img src="images/icons-titles/icon-title-PR.png" class="col-sm-12 col-md-12 img-responsive img-projects">
               <div class="col-sm-12 col-md-12 links-projects">
-                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                  <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
@@ -636,7 +636,7 @@
               <div class="col-xs-12 links-projects">
                 <a href="https://apps.apple.com/br/app/hefesto/id1480122536" class="btn btn-link-md btn-lg"> See on the App Store </a>
                 <br>
-                <a href="hefestoGallery.htm" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
+                <a href="hefestoGallery.html" class="btn btn-link-md btn-lg"> See images of the test with athletes </a>
               </div>
             </div>
           </div>   
@@ -668,7 +668,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-PA.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="https://youtu.be/anQKiZ72RGU" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                  <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
@@ -678,7 +678,7 @@
             <div class="col-xs-12 card-xs">
               <img src="images/icons-titles/icon-title-PR.png" class="col-xs-12 img-responsive img-projects">
               <div class="col-xs-12 links-projects">
-                <a href="https://youtu.be/3nfXUTzCA1w" class="btn btn-link-md btn-lg"> See on YouTube </a>
+                  <a href="pitstopGallery.html" class="btn btn-link-md btn-lg"> See details </a>
               </div>
             </div>
           </div>
