--- a/index.html
+++ b/index.html
@@ -716,6 +716,26 @@
           </div>
 
           <!-- MD and LG -->
+          
+          <div id="row" class="visible-md-* visible-lg-* hidden-xs hidden-sm">
+
+            <div class="col-md-6 col-lg-6">
+              <div class="col text-center col-lg-12 card-publications">
+                <!-- Imagem -->
+                <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" target="_blank">
+                  <img src="images/publication3.png" class="img-publications">
+                </a>
+                <!-- Título -->
+                <h1 class="title-publications"> Blockchain for mobile devices:<br> bachelor’s thesis article </h1>
+                <!-- Descrição -->
+                <p class="description-publications">
+                    Implementation of a peer-to-peer app on a local network for cryptocurrency negotiation.
+                </p>
+                <!-- Link -->
+                <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" class="btn link-publications btn-lg"> Open PDF file </a>
+              </div>
+            </div>
+
           <div id="row" class="visible-md-* visible-lg-* hidden-xs hidden-sm">
 
             <div class="col-md-6 col-lg-6">
@@ -725,7 +745,7 @@
                   <img src="images/publication1.png" class="img-publications">
                 </a>
                 <!-- Título -->
-                <h1 class="title-publications"> Mac Catalyst:<br>leve seu app de iPad para o Mac </h1>
+                <h1 class="title-publications"> Mac Catalyst:<br> bring your iPad app to the Mac </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
                   Medium article on Mac Catalyst, how to implement it and some incredible features.
@@ -742,7 +762,7 @@
                   <img src="images/publication2.png" class="img-publications">
                 </a>
                 <!-- Título -->
-                <h1 class="title-publications"> Múltiplos Carrosséis:<br>Table View + Collection View </h1>
+                <h1 class="title-publications"> Multiple Carousel: <br> Table View + Collection View </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
                   Tutorial for creating carousels published on Medium, very common in iOS apps interface.
@@ -764,7 +784,7 @@
                   <img src="images/publication1.png" class="img-publications">
                 </a>
                 <!-- Título -->
-                <h1 class="title-publications"> Mac Catalyst:<br>leve seu app de iPad para o Mac </h1>
+                <h1 class="title-publications"> Mac Catalyst:<br> bring your iPad app to the Mac </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
                   Medium article on Mac Catalyst, its implementation and features.
@@ -781,7 +801,7 @@
                   <img src="images/publication2.png" class="img-publications">
                 </a>
                 <!-- Título -->
-                <h1 class="title-publications"> Múltiplos Carrosséis:<br>Table View + Collection View </h1>
+                <h1 class="title-publications"> Multiple Carousel: <br> Table View + Collection View </h1>
                 <!-- Descrição -->
                 <p class="description-publications">
                   Tutorial published on Medium for creating carousels, a very common interface components in iOS apps.
