--- a/index.html
+++ b/index.html
@@ -776,6 +776,23 @@
 
           <!-- SM and XS -->
           <div id="row" class="visible-xs-* visible-sm-* hidden-md hidden-lg">
+              
+              <div>
+                <div class="col text-center card-publications-xs">
+                    <!-- Imagem -->
+                    <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" target="_blank">
+                      <img src="images/publication3.png" class="img-publications">
+                    </a>
+                    <!-- Título -->
+                    <h1 class="title-publications"> Blockchain for mobile devices:<br> bachelor’s thesis article </h1>
+                    <!-- Descrição -->
+                    <p class="description-publications">
+                        Implementation of a peer-to-peer app on a local network for cryptocurrency negotiation.
+                    </p>
+                    <!-- Link -->
+                    <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" class="btn link-publications btn-lg"> Open PDF file </a>
+                </div>
+              </div>
 
             <div>
               <div class="col text-center card-publications-xs">
