--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
             <div class="col-md-6 col-lg-6">
               <div class="col text-center col-lg-12 card-publications">
                 <!-- Imagem -->
-                <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" target="_blank">
+                <a href="https://dspace.mackenzie.br/handle/10899/31006" target="_blank">
                   <img src="images/publication3.png" class="img-publications">
                 </a>
                 <!-- Título -->
@@ -732,11 +732,9 @@
                     Implementation of a peer-to-peer app on a local network for cryptocurrency negotiation.
                 </p>
                 <!-- Link -->
-                <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" class="btn link-publications btn-lg"> Open PDF file </a>
+                <a href="https://dspace.mackenzie.br/handle/10899/31006" class="btn link-publications btn-lg"> Read on the University's repository </a>
               </div>
             </div>
-
-          <div id="row" class="visible-md-* visible-lg-* hidden-xs hidden-sm">
 
             <div class="col-md-6 col-lg-6">
               <div class="col text-center col-lg-12 card-publications">
@@ -772,6 +770,40 @@
               </div>
             </div>
 
+            <div class="col-md-6 col-lg-6">
+              <div class="col text-center col-lg-12 card-publications">
+                <!-- Imagem -->
+                <a href="https://apps.apple.com/br/story/id1417422848" target="_blank">
+                  <img src="images/publication5.png" class="img-publications">
+                </a>
+                <!-- Título -->
+                <h1 class="title-publications"> "A+ apps for students": <br> My App in an App Store Story </h1>
+                <!-- Descrição -->
+                <p class="description-publications">
+                  My app “Purple Notebook” in “A+ apps for students”, a story published by Apple in the App Store.
+                </p>
+                <!-- Link -->
+                <a href="https://apps.apple.com/br/story/id1417422848" class="btn link-publications btn-lg"> Read on the App Store </a>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-6">
+              <div class="col text-center col-lg-12 card-publications">
+                <!-- Imagem -->
+                <a href="https://apps.apple.com/br/story/id1549898297" target="_blank">
+                  <img src="images/publication4.png" class="img-publications">
+                </a>
+                <!-- Título -->
+                <h1 class="title-publications"> "Back to school": <br> My App in an App Store Story </h1>
+                <!-- Descrição -->
+                <p class="description-publications">
+                  My app “Purple Notebook” in “Back to school”, a story published by Apple in the App Store.
+                </p>
+                <!-- Link -->
+                <a href="https://apps.apple.com/br/story/id1549898297" class="btn link-publications btn-lg"> Read on the App Store </a>
+              </div>
+            </div>
+
           </div>
 
           <!-- SM and XS -->
@@ -780,7 +812,7 @@
               <div>
                 <div class="col text-center card-publications-xs">
                     <!-- Imagem -->
-                    <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" target="_blank">
+                    <a href="https://dspace.mackenzie.br/handle/10899/31006" target="_blank">
                       <img src="images/publication3.png" class="img-publications">
                     </a>
                     <!-- Título -->
@@ -790,7 +822,7 @@
                         Implementation of a peer-to-peer app on a local network for cryptocurrency negotiation.
                     </p>
                     <!-- Link -->
-                    <a href="pdfs/Artigo_Leonardo_Oliveira.pdf" class="btn link-publications btn-lg"> Open PDF file </a>
+                    <a href="https://dspace.mackenzie.br/handle/10899/31006" class="btn link-publications btn-lg"> Read on the University's repository </a>
                 </div>
               </div>
 
@@ -827,7 +859,43 @@
                 <a href="https://medium.com/mackmobile/múltiplos-carrosséis-table-view-collection-view-8430208ec8dd" class="btn link-publications btn-lg"> Read on Medium </a>
               </div>
             </div>
+
+            <div>
+              <div class="col text-center card-publications-xs">
+                <!-- Imagem -->
+                <a href="https://apps.apple.com/br/story/id1417422848" target="_blank">
+                  <img src="images/publication5.png" class="img-publications">
+                </a>
+                <!-- Título -->
+                <h1 class="title-publications"> "A+ apps for students": <br> My App in an App Store Story </h1>
+                <!-- Descrição -->
+                <p class="description-publications">
+                  My app “Purple Notebook” in “A+ apps for students”, a story published by Apple in the App Store.
+                </p>
+                <!-- Link -->
+                <a href="https://apps.apple.com/br/story/id1417422848" class="btn link-publications btn-lg"> Read on the App Store </a>
+              </div>
+            </div>
+
+            <div>
+              <div class="col text-center card-publications-xs">
+                <!-- Imagem -->
+                <a href="https://apps.apple.com/br/story/id1549898297" target="_blank">
+                  <img src="images/publication4.png" class="img-publications">
+                </a>
+                <!-- Título -->
+                <h1 class="title-publications"> "Back to school": <br> My App in an App Store Story </h1>
+                <!-- Descrição -->
+                <p class="description-publications">
+                  My app “Purple Notebook” in “Back to school”, a story published by Apple in the App Store.
+                </p>
+                <!-- Link -->
+                <a href="https://apps.apple.com/br/story/id1549898297" class="btn link-publications btn-lg"> Read on the App Store </a>
+              </div>
+            </div>
+
           </div>
+
         </div>
 
     </section>
