--- a/logosSimulator.html
+++ b/logosSimulator.html
@@ -60,47 +60,37 @@
                 
                 <div id="row">
                     <!-- Imagem -->
-                    <img src="images/icons/icon_cryptoLeo.png" class="visible-sm-* visible-md-* visible-lg-* hidden-xs img-responsive img-profile">
-                        <img src="images/icons/icon_cryptoLeo.png" class="visible-xs-* hidden-sm hidden-md hidden-lg img-responsive img-profile-xs">
-                            <p class="col text-center text-name"> CryptoLeo </p>
+                    <img src="images/icons/icon_logos.png" class="visible-sm-* visible-md-* visible-lg-* hidden-xs img-responsive img-profile">
+                        <img src="images/icons/icon_logos.png" class="visible-xs-* hidden-sm hidden-md hidden-lg img-responsive img-profile-xs">
+                            <p class="col text-center text-name"> Logos Simulator </p>
                         </div>
                 
                 <div id="row" class="col text-center">
                     <!-- Título -->
                     <div class="col-sm-12 col-md-12 col-lg-12 visible-sm-* visible-md-* visible-lg-* hidden-xs">
-                        <h1 class="titles"> Blockchain on mobile devices </h1>
+                        <h1 class="titles"> Practice stocks and currency investments! </h1>
                         <p class="col text-center text-about">
-                        An iOS cryptocurrency built with a CryptoKit and MultipeerConnectivity based blockchain.
+                        Incredible possibilities for learning and practicing investments without risking your money! 
+                        Live an immersive investor experience. Practice without fear of taking risks and compromising
+                        your money. Financial education is our goal.
                         </p>
-                        <a href="https://github.com/LeoAOliveira/CryptoLeo/blob/develop/README.md" class="btn btn-custom btn-lg"> Project summary </a>
+                        <a href="https://apps.apple.com/br/app/logos-simulador/id1474707449" class="btn btn-custom btn-lg"> Available on the App Store </a>
                         <br>
                         <br>
-                        <a href="https://github.com/LeoAOliveira/CryptoLeo" class="btn btn-custom btn-lg"> Visit Github </a>
-                        <br>
-                        <br>
-                        <a href="https://dspace.mackenzie.br/items/86c0054b-9f48-4f4d-9096-68cff2a7c814" class="btn btn-custom btn-lg"> Read published paper </a>
-                        <br>
-                        <br>
-                        <a href="https://www.youtube.com/watch?v=dCSsgAam7Xc" class="btn btn-custom btn-lg"> Watch thesis presentation on YouTube </a>
+                        <a href="https://github.com/LeoAOliveira/BigShort" class="btn btn-custom btn-lg"> Visit Github </a>
                     </div>
                     <div class="col-xs-12 visible-xs-* hidden-sm hidden-md hidden-lg">
-                        <h1 class="titles-xs"> Blockchain on mobile devices </h1>
+                        <h1 class="titles-xs"> Practice stocks and currency investments! </h1>
                         <p class="col text-center text-about-xs">
                         Incredible possibilities for learning and practicing investments without risking your money!
                         Live an immersive investor experience. Practice without fear of taking risks and compromising
                         your money. Financial education is our goal.
                         </p>
                         </p>
-                        <a href="https://github.com/LeoAOliveira/CryptoLeo/blob/develop/README.md" class="btn btn-custom btn-lg"> Project summary </a>
+                        <a href="https://apps.apple.com/br/app/logos-simulador/id1474707449" class="btn btn-custom btn-lg"> Available on the App Store </a>
                         <br>
                         <br>
-                        <a href="https://github.com/LeoAOliveira/CryptoLeo" class="btn btn-custom btn-lg"> Visit Github </a>
-                        <br>
-                        <br>
-                        <a href="https://dspace.mackenzie.br/items/86c0054b-9f48-4f4d-9096-68cff2a7c814" class="btn btn-custom btn-lg"> Read published paper </a>
-                        <br>
-                        <br>
-                        <a href="https://www.youtube.com/watch?v=dCSsgAam7Xc" class="btn btn-custom btn-lg"> Watch thesis presentation on YouTube </a>
+                        <a href="https://github.com/LeoAOliveira/BigShort" class="btn btn-custom btn-lg"> Visit Github </a>
                     </div>
                 </div>
             </div>
